# Faseeh_Compiler

./: Enviroment.sln  Faseeh.csproj
Compiler/: CMakeLists.txt
Compiler/examples/: hello_world.faseeh
Compiler/src/: compiler.cpp  compiler.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
Docs/: README.md
IDE/: Program.cs
IDE/Core/Models/: Document.cs  EditorSettings.cs
IDE/Core/Services/: CompilerService.cs  EditorService.cs  FileService.cs  ThemeService.cs
IDE/Presentation/: MainForm.cs  MainForm.resx
IDE/Presentation/Controls/: RichTextBoxEx.cs
Properties/: AssemblyInfo.cs
